<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SecondActivity">


    <RadioGroup
        android:id="@+id/RGfiltrarCPU"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/RBtodos"
            android:text="@string/todasCPU"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="33"/>

        <RadioButton
            android:id="@+id/RBintel"
            android:text="@string/intel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="33"/>

        <RadioButton
            android:id="@+id/RBamd"
            android:text="@string/amd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="33"/>
    </RadioGroup>

    <ListView
        android:id="@+id/lista"
        android:choiceMode="singleChoice"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/RGfiltrarCPU"
        android:drawSelectorOnTop="false"
         />

    <ImageView
        android:id="@+id/imgproducto"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_margin="16dp"
        android:src="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/ETnombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/imgCPU"/>

    <ImageView
        android:id="@+id/imgCPU"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:src="@color/colorPrimary"
        app:layout_constraintEnd_toStartOf="@id/Toggdisponibilidad"
        app:layout_constraintStart_toEndOf="@id/imgproducto"
        app:layout_constraintTop_toBottomOf="@+id/btnGuardarNombre" />

    <ToggleButton
        android:id="@+id/Toggdisponibilidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/disponibilidad"
        android:textOff="@string/agotado"
        android:textOn="@string/enStock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imgCPU"
        app:layout_constraintTop_toBottomOf="@+id/btnGuardarNombre" />

    <EditText
        android:id="@+id/ETnombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/lista"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/btnGuardarNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guardarNombre"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgproducto"
        app:layout_constraintTop_toBottomOf="@+id/ETnombre" />

    <Button
        android:id="@+id/btnAnterior"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnAnterior"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgproducto" />

    <Button
        android:id="@+id/btnSiguiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSiguiente"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgproducto"
        android:onClick="seleccionar"/>

</androidx.constraintlayout.widget.ConstraintLayout>